Refactor `NamespaceMessage` to use `ProtocolMessageUtil.readAsString` for improved code reuse and readability